--- a/dancefloor.html
+++ b/dancefloor.html
@@ -2,15 +2,22 @@
 <html>
   <head>
     <title>Object Dance Party</title>
+    <link rel="stylesheet" type="text/css" href="animate.css" />
     <link rel="stylesheet" type="text/css" href="styles.css" />
     <script src="lib/jquery.js"></script>
     <script src="src/dancer.js"></script>
     <script src="src/blinkyDancer.js"></script>
+    <script src="src/colorDancer.js"></script>
   </head>
   <body>
     <div class="topbar">
       <span class="title">object dance party</span>
-      <a href="#" class="addDancerButton" data-dancer-maker-function-name="makeBlinkyDancer">add a blinky dancer</a>    </div>
+
+      <a href="#" class="addDancerButton" data-dancer-maker-function-name="MakeBlinkyDancer">add a blinky dancer</a>
+
+      <a href="#" class="addColorDancerButton" data-color-dancer-maker-function-name="MakeColorDancer">add a color dancer</a>
+
+    </div>
     <script src="src/init.js"></script>
   </body>
 </html>
