--- a/dancefloor.html
+++ b/dancefloor.html
@@ -8,14 +8,19 @@
     <script src="src/dancer.js"></script>
     <script src="src/blinkyDancer.js"></script>
     <script src="src/colorDancer.js"></script>
+    <script src="src/breakDancer.js"></script>
   </head>
   <body>
     <div class="topbar">
-      <span class="title">object dance party</span>
+      <div class="title">object dance party</div>
 
       <a href="#" class="addDancerButton" data-dancer-maker-function-name="MakeBlinkyDancer">add a blinky dancer</a>
 
       <a href="#" class="addColorDancerButton" data-color-dancer-maker-function-name="MakeColorDancer">add a color dancer</a>
+
+      <a href="#" class="addBreakDancerButton" data-break-dancer-maker-function-name="MakeBreakDancer">add a break dancer</a>
+
+      <a href="#" class="lineUp" data-line-up-dancer-function-name="MakeBreakDancer">line up dancers</a>
 
     </div>
     <script src="src/init.js"></script>
