--- a/dancefloor.html
+++ b/dancefloor.html
@@ -12,15 +12,15 @@
   </head>
   <body>
     <div class="topbar">
-      <div class="title">object dance party</div>
+      <div class="title">Dance Party</div>
 
-      <a href="#" class="addDancerButton" data-dancer-maker-function-name="MakeBlinkyDancer">add a blinky dancer</a>
+      <a href="#" class="addDancerButton" data-dancer-maker-function-name="MakeBlinkyDancer">Blinky Dancer</a>
 
-      <a href="#" class="addColorDancerButton" data-color-dancer-maker-function-name="MakeColorDancer">add a color dancer</a>
+      <a href="#" class="addColorDancerButton" data-color-dancer-maker-function-name="MakeColorDancer">Flip Dancer</a>
 
-      <a href="#" class="addBreakDancerButton" data-break-dancer-maker-function-name="MakeBreakDancer">add a break dancer</a>
+      <a href="#" class="addBreakDancerButton" data-break-dancer-maker-function-name="MakeBreakDancer">Break Dancer</a>
 
-      <a href="#" class="lineUp" data-line-up-dancer-function-name="MakeBreakDancer">line up dancers</a>
+      <a href="#" class="lineUp" data-line-up-dancer-function-name="MakeBreakDancer">Line Up</a>
 
     </div>
     <script src="src/init.js"></script>
