--- a/dancefloor.html
+++ b/dancefloor.html
@@ -20,7 +20,9 @@
 
       <a href="#" class="addBreakDancerButton" data-break-dancer-maker-function-name="MakeBreakDancer">Break Dancer</a>
 
-      <a href="#" class="lineUp" data-line-up-dancer-function-name="MakeBreakDancer">Line Up</a>
+      <a href="#" class="lineUp" data-line-up-function-name="Dancer.lineUp">Line Up</a>
+
+      <a href="#" class="random">Random Up</a>
 
     </div>
     <script src="src/init.js"></script>
